--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 body {
   margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 1024px;
-  min-height: 100%;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 50px;
 }
 
 html {
@@ -14,7 +16,7 @@ html {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -33,6 +35,10 @@ footer {
   background-color: black;
   color: white;
   text-align: center;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  padding: 5px 0;
 }
 
 .error-message {
