--- a/src/index.css
+++ b/src/index.css
@@ -8,27 +8,13 @@ body {
   max-width: 1024px;
   min-height: 100vh;
   position: relative;
-  padding-bottom: 50px;
-}
-
-html {
-  height: 100%;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-header a:link,
-a:visited {
-  text-decoration: none;
+  padding: 0 0 40px 0;
+  background-color: #f1f1f1;
 }
 
 header {
   padding: 10px;
-  margin: 0 0 10px 0;
-  border-bottom: 2px solid black;
+  background-color: white;
 }
 
 footer {
@@ -39,6 +25,26 @@ footer {
   width: 100%;
   bottom: 0;
   padding: 5px 0;
+}
+
+main {
+  margin: 0px 10px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+}
+
+form {
+  margin: 20px;
+  background-color: white;
 }
 
 .error-message {
